--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <script defer src="js/script.js"></script>
 </head>
 <body>
-    <div id="shopping"></div>
+    <div id="mall-list"></div>
+
+    <div id="shopping-list"></div>
     
 </body>
 </html>
